# git-gud

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/plans/: git-gud_cli_refactor_fce21d3b.plan.md  git-gud_test_suite_c9ed3dbf.plan.md  lfs_alternative_implementation_741eee97.plan.md
.claude/skills/gg-command/: SKILL.md
.claude/skills/gg-command/references/: command-template.md
.claude/skills/git-passthrough/: SKILL.md
.claude/skills/rust-cli-patterns/: SKILL.md
.claude/skills/rust-cli-patterns/references/: clap-patterns.md
src/: clone.rs  config.rs  default.rs  git.rs  main.rs  push.rs  status.rs  sync.rs
src/commands/: amend.rs  clean_branches.rs  mod.rs  pr.rs  push.rs  quick_commit.rs  recent.rs  standup.rs  status.rs  sw.rs  sync.rs  today.rs  undo.rs
src/commands/lfs/: clean.rs  filter_process.rs  import.rs  install.rs  ls_files.rs  migrate.rs  mod.rs  prune.rs  pull.rs  push.rs  smudge.rs  status.rs  track.rs  verify.rs
src/lfs/: cache.rs  config.rs  mod.rs  pointer.rs  scanner.rs
src/lfs/storage/: mod.rs  s3.rs
src/utils/: repo.rs
tests/: tests.rs
tests/cli/: mod.rs  test_cli.rs
tests/common/: mod.rs  temp_repo.rs
tests/integration/: mod.rs  test_amend.rs  test_clean_branches.rs  test_lfs.rs  test_passthrough.rs  test_pr.rs  test_push.rs  test_quick_commit.rs  test_recent.rs  test_standup.rs  test_status.rs  test_sw.rs  test_sync.rs  test_today.rs  test_undo.rs
