[package]
name = "git-gud"
version = "0.1.3"
edition = "2021"
authors = ["Cael Rowley <drdeus@pm.me>"]
license = "MIT"
description = """
git-gud is a CLI tool for using git with some improved features.
"""
documentation = "https://gitlab.com/CaelRowley/git-gud"
homepage = "https://gitlab.com/CaelRowley/git-gud"
repository = "https://gitlab.com/CaelRowley/git-gud"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
git2 = "0.17"

[[bin]]
name = "gg"
path = "src/main.rs"
