[package]
name = "git-gud"
version = "0.1.3"
edition = "2021"
authors = ["Cael Rowley <drdeus@pm.me>"]
license = "MIT"
description = """
git-gud is a CLI tool for using git with some improved features.
"""
documentation = "https://gitlab.com/CaelRowley/git-gud"
homepage = "https://gitlab.com/CaelRowley/git-gud"
repository = "https://gitlab.com/CaelRowley/git-gud"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
git2 = "0.17"

# LFS dependencies
aws-sdk-s3 = "1.76"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
sha2 = "0.10"
glob = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
thiserror = "1"
async-trait = "0.1"
ignore = "0.4"
indicatif = "0.17"

[[bin]]
name = "gg"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
